# fakellm

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  fakellm.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
fakellm/: __init__.py  _state.py  _util.py  cli.py  config.py  matcher.py  responder.py  server.py  streaming.py
tests/: test_basic.py  test_fixes.py  test_matcher_multiturn.py  test_server_multiturn.py  test_state.py
